* 0.11.0 (unreleased)
   * Fixed beams only showing hit explosions on one target being hit instead of all
   * Point defense weapons should track fighters much better now
   * Fixed point defense weapons not firing properly
   * Approach no longer instantly starts autonav unless a space object or derelict is already targetted
   * Tweaked the approach logic to prefer planets over pilots when only planet is selected
   * Approach should no longer play extraneous target sounds
   * Stores now show amount for unique outfits, while equipment windows shall not
   * Fixed POI missions having markers say 'Point of Interest' instead of 'Sensor Anomaly'
   * Most consistent texture interpolation when using mipmaps
   * Pilots will do tehir first distress somewhat sooner
   * Can only start to afterburn with enough energy for 0.5 seconds of afterburning
   * Updated meson.build to require SDL 2.0.26 which seems to be minimum supported version now
   * Fixed a certain faction being enemies with wild ones when they shouldn't necessarily be
   * Soromid arx now has one non-exclusive heavy non-bio slot
   * Buffed Scanning Combat AI to have an additional +15% tracking
   * `srs_ferry`: fixed marker not updating for alternative delivery locations
   * `nelly03`: guard against the player changing systems in the middle of mining
   * `zbh06`: made mission easier for the player
   * Fixed many typos
   * Translation updates

* 0.11.0-beta.3
   * Differentiated more significantly the energy / kinetic / plasma weapon types
   * Fixed hard crash when loading when approaching certain NPCs
   * Fixed crash when change tab triggers a takeoff
   * Fixed Naev not starting on Mac OS
   * Fixed beam collisions (again)
   * Fixed rare hard crash when beams are being fired
   * 'in range' option for weapon sets now takes into account weapon arcs
   * Buffed Targeting Conduit
   * Renamed 'Point of Interest' to 'Sensor Anomaly'
   * Double-tap activating outfits breaks stealth